--- a/ch3.css
+++ b/ch3.css
@@ -2,3 +2,14 @@ body{
     background-color: #333;
     color: #fff;
 }
+a{
+    color: aliceblue;
+}
+
+a:visited{
+    color: lightgray;
+}
+
+a:hover{
+    color: #eee;
+}
