--- a/ch3.css
+++ b/ch3.css
@@ -1,15 +1,25 @@
-body{
-    background-color: #333;
-    color: #fff;
+body {
+  background-color: #333;
+  color: #fff;
 }
-a{
-    color: aliceblue;
-}
-
-a:visited{
-    color: lightgray;
+a {
+  color: aliceblue;
 }
 
-a:hover{
-    color: #eee;
+a:visited {
+  color: lightgray;
+}
+
+a:hover {
+  color: #eee;
+}
+
+table,
+tr,
+td,
+caption {
+  border: 1px solid #eee;
+  font-family: "Courier New", Courier, monospace;
+  border-collapse: collapse;
+  padding: 0.5rem;
 }
